--- a/projects/index.html
+++ b/projects/index.html
@@ -124,6 +124,8 @@ reflex-frp single page app user interface. Each has an accompanying demo.</p>
             <li class="nav-item"><a class="nav-link" href="../projects/geodetics/">&nbsp;geodetics</a></li>
             <li class="nav-item"><a class="nav-link" href="../projects/fly/">&nbsp;flight</a></li>
             <li class="nav-item"><a class="nav-link" href="../projects/tooling/">&nbsp;tooling</a></li>
+            <li class="nav-item"><a class="nav-link" href="../projects/cabal/">&nbsp;&nbsp;cabal</a></li>
+            <li class="nav-item"><a class="nav-link" href="../projects/stack/">&nbsp;&nbsp;stack</a></li>
         </ul>
     </nav>
 </div>
