Publish contributions in titles

--- a/projects/cabal/index.html
+++ b/projects/cabal/index.html
@@ -23,7 +23,7 @@
 <meta property="twitter:image" content="https://blockscope.com/mstile-150x150.png">
 <meta property="twitter:image-alt" content="Curly braces enclosing ellipsis">
 
-    <title>Cabal Tooling</title>
+    <title>Cabal Tooling Contributions</title>
     <link rel="stylesheet" href="../../css/app.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="../../favicon-32x32.png">
@@ -69,7 +69,7 @@
             </td>
             <td>
                 <div>
-                    <h1 class="display-4">Cabal Tooling</h1>
+                    <h1 class="display-4">Cabal Tooling Contributions</h1>
                     
                 </div>
             </td>
@@ -220,7 +220,7 @@
             </td>
             <td>
                 <div>
-                    <h1 class="display-4">Cabal Tooling</h1>
+                    <h1 class="display-4">Cabal Tooling Contributions</h1>
                     
                 </div>
             </td>
