--- a/projects/tooling/index.html
+++ b/projects/tooling/index.html
@@ -237,6 +237,8 @@ the mac operating system as <code>osx</code> or <code>darwin</code>.</li>
                 </div>
             </div>
         </div>
+    </div>
+    <img alt="blockscope-analytics" referrerpolicy="no-referrer-when-downgrade" src="https://static.scarf.sh/a.png?x-pxid=0fc34a86-7ed4-4c30-a942-b33d015d5d27" />
 </body>
 
 </html>
