--- a/cv/index.html
+++ b/cv/index.html
@@ -252,5 +252,6 @@ clipping and multithreading.
                 </div>
             </div>
         </div>
+        <img alt="blockscope-cv-analytics" referrerpolicy="no-referrer-when-downgrade" src="https://static.scarf.sh/a.png?x-pxid=34dc11d5-fd45-4259-86fe-64c8b6c90253" />
     </body>
 </html>
