--- a/projects/index.html
+++ b/projects/index.html
@@ -193,6 +193,8 @@ reflex-frp single page app user interface. Each has an accompanying demo.</p>
                 </div>
             </div>
         </div>
+    </div>
+    <img alt="blockscope-analytics" referrerpolicy="no-referrer-when-downgrade" src="https://static.scarf.sh/a.png?x-pxid=0fc34a86-7ed4-4c30-a942-b33d015d5d27" />
 </body>
 
 </html>
